--- a/Card.html
+++ b/Card.html
@@ -60,7 +60,7 @@
     <div class="menu">
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
