--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
 
     <script src="script.js"></script>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="./logo/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./logo/favicon-16x16.png">
+    <link rel="manifest" href="./logo/site.webmanifest">
+
 
     <style>
         body {
             background-color: ghostwhite;
         }
-
         .card {
             margin-top: 10%;
         }
-
         .footer {
             width: 100%;
             height: 50px;
@@ -36,26 +39,21 @@
             background-color: black;
             text-align: center;
             margin-top: 30px;
-
         }
-
         .menu {
             background: linear-gradient(to right, blue, darkblue, blue);
             color: white;
             margin-bottom: 20px;
             display: block;
         }
-
         .nav-link {
             color: white;
             text-decoration: none;
         }
-
         .card-body {
             text-decoration: none;
             color: black;
         }
-
         a:hover {
             text-decoration: none;
         }
