--- a/Card.html
+++ b/Card.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
     <script src="script2.js"></script>
@@ -25,13 +23,13 @@
         .footer {
             width: 100%;
             height: 35px;
-            background: linear-gradient(to right, black, grey, black);
-            color: black;
+            background-color:darkblue;
+            color: white;
             text-align: center;
         }
 
         .menu {
-            background: linear-gradient(to left, black, grey, white);
+            background-color:darkblue;
             color: white;
             margin-bottom: 20px;
         }
@@ -53,53 +51,147 @@
         .list-group {
             margin-bottom: 20px;
         }
+
+        .spinner {
+            margin: 100px auto;
+            width: 100px;
+            height: 70px;
+            position: absolute;
+            display: flex;
+        }
+
+        .cube1,
+        .cube2 {
+            background-color: yellow;
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            position: absolute;
+            display: flex;
+            top: 50%;
+            left: 50%;
+
+            -webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
+            animation: sk-cubemove 1.8s infinite ease-in-out;
+        }
+
+        .cube2 {
+            -webkit-animation-delay: -0.9s;
+            animation-delay: -0.9s;
+        }
+
+        #loader {
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            position: fixed;
+            z-index: 3;
+        }
+
+        #wrap {
+            position: fixed;
+            height: 100vh;
+            width: 100%;
+            margin: 0px;
+        }
+
+
+
+        @-webkit-keyframes sk-cubemove {
+            25% {
+                -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5)
+            }
+            50% {
+                -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg)
+            }
+            75% {
+                -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5)
+            }
+            100% {
+                -webkit-transform: rotate(-360deg)
+            }
+        }
+
+        @keyframes sk-cubemove {
+            25% {
+                transform: translateX(42px) rotate(-90deg) scale(0.5);
+                -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
+            }
+            50% {
+                transform: translateX(42px) translateY(42px) rotate(-179deg);
+                -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
+            }
+            50.1% {
+                transform: translateX(42px) translateY(42px) rotate(-180deg);
+                -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
+            }
+            75% {
+                transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+                -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+            }
+            100% {
+                transform: rotate(-360deg);
+                -webkit-transform: rotate(-360deg);
+            }
+        }
     </style>
 </head>
 
-<body>
-    <div class="menu">
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-            </li>
+<body onload="myFunction()">
+    <div id="loader">
+        <div class="spinner"></div>
+        <div class="cube1"></div>
+        <div class="cube2"></div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="list-group" id="singleBrand">
-                    <h1>Shop Name</h1>
+    <div id="wrap">
+        <div class="menu">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="list-group" id="singleBrand">
+                        <h1>Shop Name</h1>
+
+                    </div>
+                </div>
+                <div class="col-lg-9" id="singleItem">
 
                 </div>
             </div>
-            <div class="col-lg-9" id="singleItem">
-                <!--<div class="card">
-                    <img src="https://via.placeholder.com/900x350" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Item 1</h5>
-                        <h5 class="card-title">$24.99</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up
-                            the
-                            bulk
-                            of the card's content.</p>
-                    </div>
-                    <div class="card-footer text-muted">
-                        2 days ago
-                    </div>
-
-                </div>-->
+            <div class="footer">
+                Copyright
             </div>
         </div>
     </div>
-    <div class="footer">
-        Copyright
+        
+
+        <script>
+            var myVar;
+            function myFunction() {
+                document.getElementById("wrap").style.opacity = "0.3";
+                myVar = setTimeout(showPage, 1500);
+            }
+
+            function showPage() {
+                document.getElementById("wrap").style.opacity = "1";
+                document.getElementById("wrap").style.overflow="auto";
+                document.getElementById("loader").style.display = "none";
+            }
+        </script>
     </div>
 </body>
