--- a/category.html
+++ b/category.html
@@ -57,10 +57,103 @@
         a:hover {
             text-decoration: none;
         }
+
+        .spinner {
+            margin: 100px auto;
+            width: 100px;
+            height: 70px;
+            position: absolute;
+            display:flex;
+
+        }
+
+        .cube1,
+        .cube2 {
+            background-color: yellow;
+            width: 40px;
+            height: 40px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            position: absolute;
+            display:flex;
+            top:50%;
+            left:50%;
+
+            -webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
+            animation: sk-cubemove 1.8s infinite ease-in-out;
+        }
+
+        .cube2 {
+            -webkit-animation-delay: -0.9s;
+            animation-delay: -0.9s;
+        }
+
+        #loader{
+            width:100%;
+            height:100vh;
+            display:flex;
+            position:fixed;
+            z-index: 3;
+        }
+
+        #wrap{
+            position:fixed;
+            height:100vh;
+            width:100%;
+            margin: 0px;
+
+        }
+
+        
+
+        @-webkit-keyframes sk-cubemove {
+            25% {
+                -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5)
+            }
+            50% {
+                -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg)
+            }
+            75% {
+                -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5)
+            }
+            100% {
+                -webkit-transform: rotate(-360deg)
+            }
+        }
+
+        @keyframes sk-cubemove {
+            25% {
+                transform: translateX(42px) rotate(-90deg) scale(0.5);
+                -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
+            }
+            50% {
+                transform: translateX(42px) translateY(42px) rotate(-179deg);
+                -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
+            }
+            50.1% {
+                transform: translateX(42px) translateY(42px) rotate(-180deg);
+                -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
+            }
+            75% {
+                transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+                -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+            }
+            100% {
+                transform: rotate(-360deg);
+                -webkit-transform: rotate(-360deg);
+            }
+        }
     </style>
 </head>
 
-<body>
+<body onload="myFunction()">
+<div id="loader">
+        <div class="spinner"></div>
+        <div class="cube1"></div>
+        <div class="cube2"></div>
+</div>
+<div id="wrap">
     <div class="menu">
         <div style="width:49%; display:inline-block;">
             <h3> Parkour</h3>
@@ -69,7 +162,7 @@
         <div style="width:49%; display:inline-block;">
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -132,6 +225,22 @@
         <div class="footer">
             Copyright
         </div>
+    </div>
+</div>
+
+        <script>
+            var myVar;
+            function myFunction() {
+                document.getElementById("wrap").style.opacity = "0.3";
+                myVar = setTimeout(showPage, 1500);
+            }
+
+            function showPage() {
+                document.getElementById("wrap").style.opacity = "1";
+                document.getElementById("wrap").style.overflow="auto";
+                document.getElementById("loader").style.display = "none";
+            }
+        </script>
 </body>
 
 
