--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="Personalize.css" type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -28,35 +27,128 @@
 
     <style>
         body {
-            background-color: ghostwhite;
-        }
+    background-color: ghostwhite;
+    }
+
         .card {
             margin-top: 10%;
         }
+
         .footer {
             width: 100%;
             height: 50px;
             color: white;
-            background-color: black;
+            background-color: blue;
             text-align: center;
             margin-top: 30px;
         }
+
         .menu {
             background: linear-gradient(to right, blue, darkblue, blue);
             color: white;
             margin-bottom: 20px;
             display: block;
         }
+
         .nav-link {
             color: white;
             text-decoration: none;
         }
+
         .card-body {
             text-decoration: none;
             color: black;
         }
+
         a:hover {
             text-decoration: none;
+        }
+
+        .spinner {
+            margin: 100px auto;
+            width: 100px;
+            height: 70px;
+            position: absolute;
+            display:flex;
+
+        }
+
+        .cube1,
+        .cube2 {
+            background-color:yellow;
+            width: 40px;
+            height: 40px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            position: absolute;
+            display:flex;
+            top:50%;
+            left:50%;
+
+            -webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
+            animation: sk-cubemove 1.8s infinite ease-in-out;
+        }
+
+        .cube2 {
+            -webkit-animation-delay: -0.9s;
+            animation-delay: -0.9s;
+        }
+
+        #loader{
+            width:100%;
+            height:100vh;
+            display:flex;
+            position:fixed;
+            z-index: 3;
+        }
+
+        #wrap{
+            position:fixed;
+            height:100vh;
+            width:100%;
+            margin: 0px;
+
+        }
+
+        
+
+        @-webkit-keyframes sk-cubemove {
+            25% {
+                -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5)
+            }
+            50% {
+                -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg)
+            }
+            75% {
+                -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5)
+            }
+            100% {
+                -webkit-transform: rotate(-360deg)
+            }
+        }
+
+        @keyframes sk-cubemove {
+            25% {
+                transform: translateX(42px) rotate(-90deg) scale(0.5);
+                -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
+            }
+            50% {
+                transform: translateX(42px) translateY(42px) rotate(-179deg);
+                -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
+            }
+            50.1% {
+                transform: translateX(42px) translateY(42px) rotate(-180deg);
+                -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
+            }
+            75% {
+                transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+                -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+            }
+            100% {
+                transform: rotate(-360deg);
+                -webkit-transform: rotate(-360deg);
+            }
         }
     </style>
 </head>
