--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         .nav-link:hover {
             color: white;
             text-decoration: none;
-            background-color:cornflowerblue;
+            background-color:darkgrey;
             border-radius:4px;
             transition:0.5s;
         }        
